Kommentare im Fenster

--- a/RegexAnalyzer/Analyzer1/Analyzer1/Analyzer1.csproj
+++ b/RegexAnalyzer/Analyzer1/Analyzer1/Analyzer1.csproj
@@ -114,6 +114,12 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\ClassLibrary1\ClassLibrary1.csproj">
+      <Project>{87a9f989-bc3c-4336-a5a8-9eaf3de78973}</Project>
+      <Name>ClassLibrary1</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Target Name="AfterBuild">
     <GetAssemblyIdentity AssemblyFiles="$(OutDir)\$(AssemblyName).dll">
