--- a/RegexAnalyzer/Analyzer1/Analyzer1.Vsix/Analyzer1.Vsix.csproj
+++ b/RegexAnalyzer/Analyzer1/Analyzer1.Vsix/Analyzer1.Vsix.csproj
@@ -66,6 +66,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ClassLibrary1\ClassLibrary1.csproj">
+      <Project>{87a9f989-bc3c-4336-a5a8-9eaf3de78973}</Project>
+      <Name>ClassLibrary1</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Analyzer1\Analyzer1.csproj">
       <Project>{935E420A-248F-47F8-8E9A-538811B98704}</Project>
       <Name>Analyzer1</Name>
