--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 bld/
 [Bb]in/
 [Oo]bj/
+!RegexAnalyzer/Analyzer1/Analyzer1/bin/
+!RegexAnalyzer/Analyzer1/Analyzer1/bin/Debug/
 
 # Visual Studio 2015 cache/options directory
 .vs/
